--- a/styles/index.css
+++ b/styles/index.css
@@ -321,28 +321,25 @@ section .sectionContent .biographyButtonDiv .biographyButton {
 }
 
 section .sectionContent .video {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  padding: 0 0 3em 0;
-}
-
-section .sectionContent .video img {
-  height: auto;
+  position: relative;
   width: 100%;
+  padding-bottom: 56.25%;
+  height: 0;
 }
 
-section .desktopScribble {
+section .sectionContent .video iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+section .sectionContent .desktopScribble {
   display: none;
 }
 
-section .desktopScribble img {
+section .sectionContent .desktopScribble img {
   display: none;
 }
 
@@ -739,19 +736,17 @@ footer .footerLogo img {
     cursor: pointer;
   }
   section .sectionContent .firstBox .video {
-    width: 50%;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    position: relative;
+    width: 100%;
+    padding-bottom: 56.25%;
+    height: 0;
   }
-  section .sectionContent .firstBox .video img {
-    width: 50%;
+  section .sectionContent .firstBox .video iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
   }
 }
 
@@ -1004,6 +999,8 @@ footer .footerLogo img {
     font-style: italic;
     font-weight: 700;
     color: #3D362C;
+    -webkit-transform: translateY(10px);
+            transform: translateY(10px);
   }
   section .sectionContent {
     display: -webkit-box;
@@ -1022,7 +1019,7 @@ footer .footerLogo img {
   }
   section .sectionContent .firstBox {
     width: 100%;
-    padding: 0 0 0 0;
+    padding: 0 1em 0 0;
   }
   section .sectionContent .firstBox .sectionInformation {
     font-size: 18px;
@@ -1069,27 +1066,27 @@ footer .footerLogo img {
     transition: 0.25s all;
   }
   section .sectionContent .video {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    padding: 0 0 0 5em;
     position: relative;
+    width: 100%;
+    padding-bottom: 56.25%;
+    height: 0;
   }
-  section .sectionContent .video .desktopScribble {
+  section .sectionContent .video iframe {
+    position: absolute;
+    top: 20%;
+    left: 0;
+    width: 100%;
+    height: 50%;
+  }
+  section .sectionContent .desktopScribble {
     display: initial;
   }
-  section .sectionContent .video .desktopScribble img {
+  section .sectionContent .desktopScribble img {
     height: auto;
     width: 100px;
     position: absolute;
-    top: -58%;
-    right: -16%;
+    top: -15%;
+    right: -15%;
     display: initial;
   }
   footer {
@@ -1534,6 +1531,8 @@ footer .footerLogo img {
     font-style: italic;
     font-weight: 700;
     color: #3D362C;
+    -webkit-transform: translateY(100px);
+            transform: translateY(100px);
   }
   section .sectionContent {
     display: -webkit-box;
@@ -1552,7 +1551,7 @@ footer .footerLogo img {
   }
   section .sectionContent .firstBox {
     width: 100%;
-    padding: 0 0 0 0;
+    padding: 0 2em 0 0;
   }
   section .sectionContent .firstBox .sectionInformation {
     font-size: 20px;
@@ -1599,26 +1598,26 @@ footer .footerLogo img {
     transition: 0.25s all;
   }
   section .sectionContent .video {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    padding: 0 0 0 5em;
     position: relative;
+    width: 100%;
+    padding-bottom: 56.25%;
+    height: 50%;
   }
-  section .sectionContent .video .desktopScribble {
+  section .sectionContent .video iframe {
+    position: absolute;
+    top: 20%;
+    left: 0;
+    width: 100%;
+    height: 50%;
+  }
+  section .sectionContent .desktopScribble {
     display: initial;
   }
-  section .sectionContent .video .desktopScribble img {
+  section .sectionContent .desktopScribble img {
     height: auto;
     width: 100px;
     position: absolute;
-    top: -45%;
+    top: -10%;
     right: -15%;
     display: initial;
   }
