--- a/styles/index.css
+++ b/styles/index.css
@@ -527,16 +527,17 @@ footer .designAndDevelopment h1 {
   letter-spacing: 0.1em;
 }
 
-footer .designAndDevelopment img {
+footer .designAndDevelopment .businessLogo img {
   width: 100%;
   height: 1.8em;
   overflow: visible;
-  margin: 0 0 0 0;
+  margin: 0;
 }
 
-footer .designAndDevelopment a {
+footer .designAndDevelopment .businessLogo a {
   overflow: visible;
   width: 100%;
+  margin: 0 0.5em;
 }
 
 footer .designAndDevelopment .businessLogo::after {
