--- a/styles/index.scss
+++ b/styles/index.scss
@@ -449,16 +449,20 @@ footer {
             letter-spacing: 0.1em;
         }
 
-        img {
-            width: 100%;
-            height: 1.8em;
-            overflow: visible;
-            margin: 0 0 0 0;
-        }
+        .businessLogo {
+            img {
+                width: 100%;
+                height: 1.8em;
+                overflow: visible;
+                margin: 0;
+            }
+    
+            a {
+                overflow: visible;
+                width: 100%;
+                margin: 0 0.5em;
+            }
 
-        a {
-            overflow: visible;
-            width: 100%;
         }
 
         .businessLogo::after {
