--- a/styles/index.scss
+++ b/styles/index.scss
@@ -33,7 +33,8 @@ main {
 
         .hamburger {
             transition: 0.5s all;
-            cursor: pointer;
+            background-color: red;
+            position: relative;
 
             .hamgburgerItem {
                 content: '';
@@ -61,6 +62,18 @@ main {
                 margin: 0.5em 0 0 0;
                 position: absolute;
                 transition: 0.5s all;
+            }
+
+            .hamburgerTrigger {
+                content: '';
+                position: absolute;
+                top: -10px;
+                right:0;
+                background-color: transparent;
+                width: 30px;
+                height: 30px;
+                z-index: 3;
+                cursor: pointer;
             }
         }
 
