--- a/styles/about.scss
+++ b/styles/about.scss
@@ -785,7 +785,7 @@ footer {
         .contents {
             display: flex;
             flex-direction: row;
-            padding: 5% 10%;
+            padding: 0 10% 2em 10%;
 
             .firstBox {
                 padding: 0 4em 0 0;
