--- a/styles/index.scss
+++ b/styles/index.scss
@@ -289,15 +289,22 @@ section {
             align-items: center;
             justify-content: center;
             padding: 0 0 3em 0;
-    
-            .biographyButton {
+
+            a {
                 width: 100%;
-                height: 50px;
+                height: 60px;
                 border-radius: 2em;
-                border: none;
-                color: $white;
-                background-color: $darkRed;
-                font-size: $mobileButtonText;
+                    
+                    
+                .biographyButton {
+                    width: 100%;
+                    height: 50px;
+                    border-radius: 2em;
+                    border: none;
+                    color: $white;
+                    background-color: $darkRed;
+                    font-size: $mobileButtonText;
+                }
             }
         }
 
@@ -664,15 +671,18 @@ section {
                 justify-content: center;
                 padding: 0 0 3em 0;
 
-                .biographyButton {
+                a {
                     width: 100%;
                     height: 60px;
                     border-radius: 2em;
-                    border: none;
-                    color: $white;
-                    background-color: $darkRed;
-                    font-size: $tabletButtonText;
-                    cursor: pointer;
+                        
+                    .biographyButton {
+                        border: none;
+                        color: $white;
+                        background-color: $darkRed;
+                        font-size: $tabletButtonText;
+                        cursor: pointer;
+                    }
                 }
             }
   
