--- a/styles/about.css
+++ b/styles/about.css
@@ -132,6 +132,7 @@ main nav .links {
   opacity: 0;
   -webkit-transition: 0.25s all;
   transition: 0.25s all;
+  z-index: -1;
 }
 
 main nav .links ul {
@@ -630,6 +631,7 @@ footer .footerLogo img {
     opacity: 0;
     -webkit-transition: 0.25s all;
     transition: 0.25s all;
+    z-index: -1;
   }
   main nav .links ul {
     list-style: none;
@@ -832,6 +834,7 @@ footer .footerLogo img {
         -ms-flex-pack: center;
             justify-content: center;
     height: 100%;
+    z-index: initial;
   }
   main nav .links ul {
     list-style: none;
@@ -1185,6 +1188,7 @@ footer .footerLogo img {
         -ms-flex-pack: center;
             justify-content: center;
     height: 100%;
+    z-index: initial;
   }
   main nav .links ul {
     list-style: none;
