--- a/styles/index.scss
+++ b/styles/index.scss
@@ -111,6 +111,7 @@ main {
             overflow-x: hidden;
             opacity: 0;
             transition: 0.25s all;
+            z-index: -1;
 
             ul {
                 list-style: none;
@@ -773,6 +774,7 @@ section {
                 flex-direction: row;
                 align-items: center;
                 justify-content: center;
+                z-index: initial;
     
                 ul {
                     list-style: none;
@@ -1256,6 +1258,7 @@ section {
                 flex-direction: row;
                 align-items: center;
                 justify-content: center;
+                z-index: initial;
     
                 ul {
                     list-style: none;
