--- a/styles/about.css
+++ b/styles/about.css
@@ -919,11 +919,11 @@ footer .footerLogo img {
     font-size: 18px;
   }
   main .contents .secondBox {
-    width: 250%;
+    width: 100%;
   }
   main .contents .secondBox img {
     height: auto;
-    width: 100%;
+    width: 250px;
     -webkit-transform: translateY(0px);
             transform: translateY(0px);
   }
@@ -1132,7 +1132,7 @@ footer .footerLogo img {
             box-sizing: border-box;
   }
   main {
-    height: 100vh;
+    height: auto;
     width: 100%;
     background-repeat: no-repeat;
     background-size: cover;
@@ -1264,20 +1264,20 @@ footer .footerLogo img {
     -webkit-box-direction: normal;
         -ms-flex-direction: row;
             flex-direction: row;
-    padding: 0 10%;
+    padding: 0 10% 10% 10%;
   }
   main .contents .firstBox {
     padding: 0 4em 0 0;
   }
   main .contents .firstBox .details p {
-    font-size: 20px;
+    font-size: 18px;
   }
   main .contents .secondBox {
-    width: 175%;
+    width: 100%;
   }
   main .contents .secondBox img {
     height: auto;
-    width: 100%;
+    width: 320px;
     -webkit-transform: translateY(0px);
             transform: translateY(0px);
   }
