--- a/styles/about.scss
+++ b/styles/about.scss
@@ -802,11 +802,11 @@ footer {
             }
 
             .secondBox {
-                width: 250%;
+                width: 100%;
 
                 img {
                     height: auto;
-                    width: 100%;
+                    width: 250px;
                     transform: translateY(0px);
                 }
             }
@@ -972,305 +972,306 @@ footer {
 
 // desktop large
 @media only screen and (min-width: 1300px) {
-    * {
-        font-family: $fontFamily;
-        font-weight: 400;
-        padding:0;
-        margin:0;
-        box-sizing: border-box;
-    }
-    
-    
-    
-    main {
-        height: 100vh;
-        width: 100%;
-        background-repeat: no-repeat;
-        background-size:cover;
-        position: relative;
-        padding: 0;
-    
-        nav {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            flex-direction: row;
-            padding: 2em 5%;
-    
-            .logo {
-                
-                img {
-                    width: 80px;
-                    height: auto;
-                }
-            }
-    
-            .hamburger {
-                display: none;
-            }
-    
-            .links {
-                position: initial;
-                width:initial;
-                height:initial;
-                background-color: transparent;
-                top:0;
-                left: 0;
-                padding: 0;
-                margin: 0;
-                opacity: 1;
-                transition: 0.25s all;
+        * {
+            font-family: $fontFamily;
+            font-weight: 400;
+            padding:0;
+            margin:0;
+            box-sizing: border-box;
+        }
+        
+        
+        
+        main {
+            height: auto;
+            width: 100%;
+            background-repeat: no-repeat;
+            background-size:cover;
+            position: relative;
+            padding: 0;
+        
+            nav {
                 display: flex;
-                flex-direction: row;
+                justify-content: space-between;
                 align-items: center;
-                justify-content: center;
-                height: 100%;
-                z-index: initial;
-    
-                ul {
-                    list-style: none;
-                    text-decoration: none;
+                flex-direction: row;
+                padding: 2em 5%;
+        
+                .logo {
+                    
+                    img {
+                        width: 80px;
+                        height: auto;
+                    }
+                }
+        
+                .hamburger {
+                    display: none;
+                }
+        
+                .links {
+                    position: initial;
+                    width:initial;
+                    height:initial;
+                    background-color: transparent;
+                    top:0;
+                    left: 0;
+                    padding: 0;
+                    margin: 0;
+                    opacity: 1;
+                    transition: 0.25s all;
                     display: flex;
+                    flex-direction: row;
                     align-items: center;
                     justify-content: center;
-                    margin: 0 2em 0 0;
-                    
-                    li {
-                        padding: 0 2em;
+                    height: 100%;
+                    z-index: initial;
+        
+                    ul {
+                        list-style: none;
                         text-decoration: none;
-    
-                        a {
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                        margin: 0 2em 0 0;
+                        
+                        li {
+                            padding: 0 2em;
                             text-decoration: none;
-                            color: $black;
-                            font-size: $desktopLinks;
-                            font-family: $fontFamily;
-                        }
+        
+                            a {
+                                text-decoration: none;
+                                color: $black;
+                                font-size: $desktopLinks;
+                                font-family: $fontFamily;
+                            }
 
-                        .homeContainer:hover::after {
-                            opacity: 1;
-                            height: 10px;
-                            transition: 0.25s all;
-                        }
+                            .homeContainer:hover::after {
+                                opacity: 1;
+                                height: 10px;
+                                transition: 0.25s all;
+                            }
 
-                        .aboutContainer::after  {
-                            opacity: 1;
-                            height: 10px;
-                            transition: 0.25s all;
-                        }
+                            .aboutContainer::after {
+                                opacity: 1;
+                                height: 10px;
+                                transition: 0.25s all;
+                            }
 
-                        .projectsContainer:hover::after {
-                            opacity: 1;
-                            height: 10px;
-                            transition: 0.25s all;
+                            .projectsContainer:hover::after {
+                                opacity: 1;
+                                height: 10px;
+                                transition: 0.25s all;
+                            }
+                        }
+                    }
+        
+                    .contact {
+                        background-color: transparent;
+                        border: solid 1px $darkRed;
+                        color: $darkRed;
+                        font-size: $desktopLinks;
+                        font-family: $fontFamily;
+                        padding: 0.5em 2.5em;
+                        border-radius: 2em;
+                        cursor: pointer;
+                        transition: 0.25s all;
+                    }
+                }
+                
+                .contact:hover {
+                    transition: 0.25s all;
+                    background-color: $darkRed;
+                    color: $white;
+                }
+
+                .links.active {
+                    opacity: 1;
+                    transition: 0.25s all;
+                    z-index: 2;
+                }
+            }
+
+            .contents {
+                display: flex;
+                flex-direction: row;
+                padding: 0 10% 10% 10%;
+
+                .firstBox {
+                    padding: 0 4em 0 0;
+
+                    .details {
+
+                        p {
+                            font-size: $desktopParagraph;
                         }
                     }
                 }
-    
-                .contact {
-                    background-color: transparent;
-                    border: solid 1px $darkRed;
-                    color: $darkRed;
-                    font-size: $desktopLinks;
-                    font-family: $fontFamily;
-                    padding: 0.5em 2.5em;
-                    border-radius: 2em;
-                    cursor: pointer;
-                    transition: 0.25s all;
-                }
-            }
-            
-            .contact:hover {
-                transition: 0.25s all;
-                background-color: $darkRed;
-                color: $white;
-            }
 
-            .links.active {
-                opacity: 1;
-                transition: 0.25s all;
-                z-index: 2;
+                .secondBox {
+                    width: 100%;
+
+                    img {
+                        height: auto;
+                        width: 320px;
+                        transform: translateY(0px);
+                    }
+                }
             }
         }
-
-        .contents {
+        
+        
+        footer {
             display: flex;
+            align-items: center;
+            justify-content: space-between;
             flex-direction: row;
-            padding: 0 10%;
+            background-image: url(/Images/desktopFooterBackground.png);
+            background-size: contain;
+            padding: 8em 10%;
 
-            .firstBox {
-                padding: 0 4em 0 0;
+            .footerDetails {
+                display: flex;
+                align-items: flex-start;
+                justify-content: flex-start;
+                flex-direction: row;
 
-                .details {
-
-                    p {
-                        font-size: $desktopLargeParagraph;
+                .contact {
+                    display: flex;
+                    align-items: flex-start;
+                    justify-content: flex-start;
+                    flex-direction: column;
+                    padding: 0 4em 0 0;
+                    transition: 0.25s all;
+            
+                    h1 {
+                        color: $darkRed;
+                        text-transform: uppercase;
+                        font-size: 18px;
+                        padding: 1em 0;
+                        letter-spacing: 0.1em;
                     }
+            
+                    .mobile {
+                        padding: 0 0 1em 1.5em;
+                    }
+            
+                    .mobile::before {
+                        content: '';
+                        position: absolute;
+                        width: 30px;
+                        height: 30px;
+                        background-repeat: no-repeat;
+                        transform: translateX(-25px);
+                        background-image: url(/Images/desktopFooterMobile.svg);
+                    }
+            
+                    .email {
+                        padding: 0 0 0 1.75em;
+                    }
+                }
+            
+                .socials {
+                    display: flex;
+                    align-items: flex-start;
+                    justify-content: flex-start;
+                    flex-direction: column;
+                    padding: 0 4em 0 0;
+                    width: auto;
+            
+                    h1 {
+                        color: $darkRed;
+                        text-transform: uppercase;
+                        font-size: 18px;
+                        padding: 1em 0;
+                        letter-spacing: 0.1em;
+                    }
+            
+                    .icons {
+                        display: flex;
+                        align-items: center;
+                        justify-content: space-between;
+                        width: 8em;
+            
+                        img {
+                            width: auto;
+                            height: 2em;
+                        }
+
+                        .facebookIcon:hover:after {
+                            height: 10px;
+                            opacity: 1;
+                            transition: 0.25s all;
+                        }
+
+                        .instagramIcon:hover::after {
+                            height: 10px;
+                            opacity: 1;
+                            transition: 0.25s all;
+                        }
+
+                        .youtubeIcon:hover:after {
+                            height: 10px;
+                            opacity: 1;
+                            transition: 0.25s all;
+                        }
+                    }
+                }
+            
+                .designAndDevelopment {
+                    display: flex;
+                    align-items: flex-start;
+                    justify-content: flex-start;
+                    flex-direction: column;
+                    padding: 0 0 0 0;
+                    width: 100%;
+                    overflow: visible;
+
+                    h1 {
+                        color: $darkRed;
+                        text-transform: uppercase;
+                        font-size: 18px;
+                        padding: 1em 0;
+                        letter-spacing: 0.1em;
+                    }
+            
+                    .businessLogo {
+                        margin: 0 0 0 -1em;
+                        
+                        img {
+                            width: 100%;
+                            height: 1.75em;
+                            margin: 0;
+                            overflow: visible;
+                        }
+        
+                        a { 
+                            overflow: visible;
+                            width: 100%;
+                            margin: 0 0.5em;
+                        }
+                    }
+                }
+
+                .businessLogo:hover:after {
+                    opacity: 1;
+                    height: 10px;
                 }
             }
 
-            .secondBox {
-                width: 175%;
+            .footerLogo {
+                display: flex;
+                align-items: flex-end;
+                display: initial;
+                justify-content: flex-end;
 
                 img {
-                    height: auto;
-                    width: 100%;
-                    transform: translateY(0px);
+                    width: auto;
+                    height: 50px;
+                    margin: 1em 0 0 0;
+                    display: initial;
                 }
             }
         }
-    }
-    
-    
-    footer {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        flex-direction: row;
-        background-image: url(/Images/desktopFooterBackground.png);
-        background-size: contain;
-        padding: 8em 10%;
 
-        .footerDetails {
-            display: flex;
-            align-items: flex-start;
-            justify-content: flex-start;
-            flex-direction: row;
-
-            .contact {
-                display: flex;
-                align-items: flex-start;
-                justify-content: flex-start;
-                flex-direction: column;
-                padding: 0 4em 0 0;
-                transition: 0.25s all;
-        
-                h1 {
-                    color: $darkRed;
-                    text-transform: uppercase;
-                    font-size: 18px;
-                    padding: 1em 0;
-                    letter-spacing: 0.1em;
-                }
-        
-                .mobile {
-                    padding: 0 0 1em 1.5em;
-                }
-        
-                .mobile::before {
-                    content: '';
-                    position: absolute;
-                    width: 30px;
-                    height: 30px;
-                    background-repeat: no-repeat;
-                    transform: translateX(-25px);
-                    background-image: url(/Images/desktopFooterMobile.svg);
-                }
-        
-                .email {
-                    padding: 0 0 0 1.75em;
-                }
-            }
-        
-            .socials {
-                display: flex;
-                align-items: flex-start;
-                justify-content: flex-start;
-                flex-direction: column;
-                padding: 0 4em 0 0;
-                width: auto;
-        
-                h1 {
-                    color: $darkRed;
-                    text-transform: uppercase;
-                    font-size: 18px;
-                    padding: 1em 0;
-                    letter-spacing: 0.1em;
-                }
-        
-                .icons {
-                    display: flex;
-                    align-items: center;
-                    justify-content: space-between;
-                    width: 8em;
-        
-                    img {
-                        width: auto;
-                        height: 2em;
-                    }
-
-                    .facebookIcon:hover:after {
-                        height: 10px;
-                        opacity: 1;
-                        transition: 0.25s all;
-                    }
-
-                    .instagramIcon:hover::after {
-                        height: 10px;
-                        opacity: 1;
-                        transition: 0.25s all;
-                    }
-
-                    .youtubeIcon:hover:after {
-                        height: 10px;
-                        opacity: 1;
-                        transition: 0.25s all;
-                    }
-                }
-            }
-        
-            .designAndDevelopment {
-                display: flex;
-                align-items: flex-start;
-                justify-content: flex-start;
-                flex-direction: column;
-                padding: 0 0 0 0;
-                width: 100%;
-                overflow: visible;
-
-                h1 {
-                    color: $darkRed;
-                    text-transform: uppercase;
-                    font-size: 18px;
-                    padding: 1em 0;
-                    letter-spacing: 0.1em;
-                }
-        
-                .businessLogo {
-                    margin: 0 0 0 -1em;
-                    
-                    img {
-                        width: 100%;
-                        height: 1.75em;
-                        margin: 0;
-                        overflow: visible;
-                    }
-    
-                    a { 
-                        overflow: visible;
-                        width: 100%;
-                        margin: 0 0.5em;
-                    }
-                }
-            }
-
-            .businessLogo:hover:after {
-                opacity: 1;
-                height: 10px;
-            }
-        }
-
-        .footerLogo {
-            display: flex;
-            align-items: flex-end;
-            display: initial;
-            justify-content: flex-end;
-
-            img {
-                width: auto;
-                height: 50px;
-                margin: 1em 0 0 0;
-                display: initial;
-            }
-        }
-    }
 }
