--- a/styles/projects.css
+++ b/styles/projects.css
@@ -274,7 +274,21 @@ main .contents .firstBox .details p {
   padding: 0 0 2em 0;
 }
 
-main .contents .firstBox .buttonContainer {
+main .contents .firstBox .buttonWrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  width: 100%;
+  padding: 0;
+  margin: 0;
+}
+
+main .contents .firstBox .buttonWrapper .buttonContainer {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -285,16 +299,17 @@ main .contents .firstBox .buttonContainer {
       -ms-flex-pack: center;
           justify-content: center;
   width: 100%;
-  padding: 0 0 2em 0;
+  padding: 0;
+  margin: 0 0 2em 0;
 }
 
-main .contents .firstBox .buttonContainer a {
+main .contents .firstBox .buttonWrapper .buttonContainer a {
+  padding: 0;
+  margin: 0;
   width: 100%;
-  height: 60px;
-  border-radius: 2em;
 }
 
-main .contents .firstBox .buttonContainer a .buttonOne {
+main .contents .firstBox .buttonWrapper .buttonContainer a .buttonOne {
   width: 100%;
   height: 50px;
   border-radius: 2em;
@@ -302,6 +317,23 @@ main .contents .firstBox .buttonContainer a .buttonOne {
   color: #FFFFFF;
   background-color: #550710;
   font-size: 18px;
+  text-transform: capitalize;
+  padding: 0;
+  margin: 0;
+}
+
+main .contents .firstBox .buttonWrapper .scribble {
+  display: none;
+  opacity: 1;
+}
+
+main .contents .firstBox .buttonWrapper .scribble img {
+  height: auto;
+  width: 250px;
+  z-index: 2;
+  margin: 0 1em 1em 0;
+  display: none;
+  opacity: 1;
 }
 
 main .contents .secondBox {
@@ -557,13 +589,21 @@ footer .footerLogo img {
 }
 
 @media only screen and (min-width: 550px) and (max-width: 1024px) {
+  * {
+    font-family: "Vollkorn", serif;
+    font-weight: 400;
+    padding: 0;
+    margin: 0;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
+  }
   main {
     height: auto;
     width: 100%;
     background-color: #FFFFFF;
     background-repeat: no-repeat;
     background-size: cover;
-    padding: 45px 50px 45px 50px;
+    padding: 30px 25px 30px 25px;
     -webkit-box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.15);
             box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.15);
   }
@@ -660,7 +700,7 @@ footer .footerLogo img {
   main nav .links {
     position: absolute;
     width: 100%;
-    height: 100%;
+    height: 200%;
     background-color: #550710;
     top: 0;
     left: 0;
@@ -735,7 +775,6 @@ footer .footerLogo img {
     -webkit-transition: 0.25s all;
     transition: 0.25s all;
     z-index: 2;
-    height: 100%;
   }
   main .contents {
     display: -webkit-box;
@@ -783,11 +822,74 @@ footer .footerLogo img {
     text-align: end;
     margin: -0.25em 0 0 0;
   }
+  main .contents .firstBox .details h1 {
+    font-family: "Vollkorn", serif;
+    font-size: 26px;
+    font-style: italic;
+    font-weight: 700;
+    color: #3D362C;
+    padding: 0 0 1em 0;
+  }
   main .contents .firstBox .details p {
     color: #3D362C;
-    font-size: 20px;
+    font-size: 15px;
     line-height: 2em;
-    padding: 0 0 3em 0;
+    padding: 0 0 1em 0;
+  }
+  main .contents .firstBox .buttonWrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    width: 100%;
+    padding: 0;
+    margin: 0;
+  }
+  main .contents .firstBox .buttonWrapper .buttonContainer {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    width: 100%;
+    padding: 0;
+    margin: 0;
+  }
+  main .contents .firstBox .buttonWrapper .buttonContainer a {
+    padding: 0;
+    margin: 0;
+  }
+  main .contents .firstBox .buttonWrapper .buttonContainer a .buttonOne {
+    width: 95%;
+    height: 50px;
+    border-radius: 2em;
+    border: none;
+    color: #FFFFFF;
+    background-color: #550710;
+    font-size: 18px;
+    text-transform: capitalize;
+    padding: 0;
+    margin: 0;
+  }
+  main .contents .firstBox .buttonWrapper .scribble {
+    display: initial;
+    opacity: 1;
+  }
+  main .contents .firstBox .buttonWrapper .scribble img {
+    opacity: 1;
+    height: auto;
+    width: 250px;
+    z-index: 2;
+    margin: 0 1em 1em 0;
+    display: initial;
   }
   main .contents .secondBox {
     display: -webkit-box;
@@ -803,7 +905,219 @@ footer .footerLogo img {
   }
   main .contents .secondBox img {
     height: auto;
-    width: 50%;
+    width: 100%;
+  }
+  footer {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    background-image: url(/Images/mobileFooterBackground.png);
+    background-size: cover;
+    padding: 20px 25px;
+  }
+  footer .contact {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    padding: 5em 0 0 0;
+  }
+  footer .contact h1 {
+    color: #550710;
+    text-transform: uppercase;
+    font-size: 18px;
+    padding: 0 0 1em 0;
+    letter-spacing: 0.1em;
+  }
+  footer .contact .mobile {
+    padding: 0 0 0.75em 1em;
+  }
+  footer .contact .mobile::before {
+    content: '';
+    position: absolute;
+    width: 30px;
+    height: 30px;
+    background-repeat: no-repeat;
+    -webkit-transform: translateX(-25px);
+            transform: translateX(-25px);
+    background-image: url(/Images/desktopFooterMobile.svg);
+  }
+  footer .contact .email {
+    padding: 0 0 0.75em 1em;
+  }
+  footer .contact .email::before {
+    content: '';
+    position: absolute;
+    width: 30px;
+    height: 30px;
+    background-repeat: no-repeat;
+    -webkit-transform: translateX(-30px);
+            transform: translateX(-30px);
+    background-image: url(/Images/desktopFooterEmail.svg);
+  }
+  footer .socials {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    padding: 3em 0 0 0;
+    width: 100%;
+  }
+  footer .socials h1 {
+    color: #550710;
+    text-transform: uppercase;
+    font-size: 18px;
+    padding: 0 0 1em 0;
+    letter-spacing: 0.1em;
+  }
+  footer .socials .icons {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    width: 8em;
+  }
+  footer .socials .icons .facebookIcon::after {
+    content: '';
+    background-color: #550710;
+    position: absolute;
+    width: 25px;
+    height: 2px;
+    -webkit-transform: translateY(40px) translateX(-18px);
+            transform: translateY(40px) translateX(-18px);
+    -webkit-transition: 0.25s all;
+    transition: 0.25s all;
+    opacity: 0;
+  }
+  footer .socials .icons .instagramIcon::after {
+    content: '';
+    background-color: #550710;
+    position: absolute;
+    width: 25px;
+    height: 2px;
+    -webkit-transform: translateY(40px) translateX(-32px);
+            transform: translateY(40px) translateX(-32px);
+    -webkit-transition: 0.25s all;
+    transition: 0.25s all;
+    opacity: 0;
+  }
+  footer .socials .icons .youtubeIcon::after {
+    content: '';
+    background-color: #550710;
+    position: absolute;
+    width: 25px;
+    height: 2px;
+    -webkit-transform: translateY(40px) translateX(-42px);
+            transform: translateY(40px) translateX(-42px);
+    -webkit-transition: 0.25s all;
+    transition: 0.25s all;
+    opacity: 0;
+  }
+  footer .socials .icons img {
+    width: auto;
+    height: 2em;
+  }
+  footer .designAndDevelopment {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    padding: 3em 0 4em 0;
+    width: 100%;
+    overflow: visible;
+  }
+  footer .designAndDevelopment h1 {
+    color: #550710;
+    text-transform: uppercase;
+    font-size: 18px;
+    padding: 0 0 1em 0;
+    letter-spacing: 0.1em;
+  }
+  footer .designAndDevelopment .businessLogo {
+    margin: 0 1.5em 0 0;
+  }
+  footer .designAndDevelopment .businessLogo img {
+    width: 100%;
+    height: 1.8em;
+    overflow: visible;
+    margin: 0;
+  }
+  footer .designAndDevelopment .businessLogo a {
+    overflow: visible;
+    width: 100%;
+    margin: 0 0.5em;
+  }
+  footer .designAndDevelopment .businessLogo::after {
+    content: '';
+    background-color: #550710;
+    position: absolute;
+    width: 25px;
+    height: 2px;
+    -webkit-transform: translateY(6px) translateX(15px);
+            transform: translateY(6px) translateX(15px);
+    opacity: 0;
+    -webkit-transition: 0.25s all;
+    transition: 0.25s all;
+  }
+  footer .footerLogo {
+    display: none;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: end;
+        -ms-flex-align: end;
+            align-items: flex-end;
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
+  }
+  footer .footerLogo img {
+    display: none;
+    width: auto;
+    height: 50px;
+    margin: 1em 0 0 0;
   }
 }
 
