--- a/styles/__variables.scss
+++ b/styles/__variables.scss
@@ -21,6 +21,7 @@ $tabletButtonText: 22px;
 
 $desktopLinks: 23px;
 $desktopSubheadings: 50px;
+$desktopSubheadings02: 40px;
 $desktopParagraph: 18px;
 $desktopButtonText: 22px;
 
